fixed aligning button with text and carousel implementation of sponsors

--- a/src/app/modules/shared/components/public/public.component.css
+++ b/src/app/modules/shared/components/public/public.component.css
@@ -226,8 +226,8 @@ a.dropdown-item {
 }
 
 .hero-maintext h1 {
-	margin-top: 9vw;
-	margin-left: 130px;
+	margin-top: 20vw;
+	margin-left: 10vw;
 	/*margin-bottom: 30px;*/
 	color: #e2a90a;
 	font-weight: 900;
@@ -239,6 +239,7 @@ a.dropdown-item {
 }
 
 .hero-button {
+	margin-top: -160px;
 	font-size: 35px;
 	font-weight: 700;
 	padding: 10px 25px;
@@ -267,6 +268,14 @@ a.dropdown-item {
 }
 
 /* Hero Section Large Devices*/
+@media (max-width: 1150px) {
+	.hero-button {
+		margin-top: 0;
+	}
+	.hero-maintext h1 {
+		margin-top: 10vw;
+	}
+}
 @media (max-width: 930px) {
 	.hero-subtext h4 {
 		font-size: 35px;
@@ -1045,6 +1054,16 @@ a.dropdown-item {
 
 .accoladi-sponsors h4 {
 	margin-bottom: 50px;
+}
+
+::ng-deep .accoladi-sponsors .carousel-control-prev,
+::ng-deep .accoladi-sponsors .carousel-control-next {
+	width: 40px;
+}
+::ng-deep .accoladi-sponsors .carousel-control-next-icon,
+::ng-deep .accoladi-sponsors .carousel-control-prev-icon {
+	height: 40px;
+	width: 40px;
 }
 
 .accoladi-sponsors .sponsor-item {
